[package]
name = "safe-mmio"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Types for safe MMIO device access, especially in systems with an MMU."
authors = ["Andrew Walbran <qwandor@google.com>"]
repository = "https://github.com/google/safe-mmio"
keywords = ["mmio"]
categories = ["embedded", "no-std"]
rust-version = "1.85"

[features]
custom-mmio = []

[dependencies]
zerocopy = { version = "0.8.50", features = ["derive"] }
